# url-shortener

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  database.py  exceptions.py  main.py  models.py  pyproject.toml  routes.py  schemas.py
.github/: dependabot.yml
.github/workflows/: build-push-docker-hub.yml  pytest-coverage.yml  ruff-linter-fixer.yml
config/: config.py
database/: database.py
docs/: database_schema.mmd  get-long-url-route-sequence-diagram.mmd  project-brief.md  shorten-route-sequence-diagram.mmd
exceptions/: exceptions.py
models/: models.py
routes/: routes.py
schemas/: schemas.py
services/: long_url.py  short_url.py  url.py
sql/: schema.sql
tests/: test_database.py  test_long_url_service.py  test_main.py  test_routes.py  test_schemas.py  test_short_url_service.py  test_url_service.py
