[project]
name = "url-shortener"
version = "0.1.0"
description = "A simple URL shortener API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg>=3.2.9",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.ruff]
# Exclude certain files and directories
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

indent-width = 4

[tool.ruff.lint]
# Enable preset rules
select = ["ANN","B","C4","DTZ","N","I","E","W","FAST","RUF","TRY", "T20", "PT", "Q", "RET", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs}/*" = ["E402"]

fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
